--- a/public/contact-us/contact-us.html
+++ b/public/contact-us/contact-us.html
@@ -116,7 +116,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <script defer src="/frontend/components/themes/dark-mode-toggle.js"></script>
 
-    <base href="/frontend/contact-us/">
+    <base href="/public/contact-us/">
     <link rel="stylesheet" href="contact-us.css" />
     <title>Contact Us - WealthPsychology</title>
   </head>
