--- a/public/about-us/about-us.html
+++ b/public/about-us/about-us.html
@@ -63,7 +63,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <!-- <script defer src="/frontend/components/themes/dark-mode-toggle.js"></script> -->
 
-    <base href="/frontend/about-us/" />
+    <base href="/public/about-us/" />
     <link rel="stylesheet" href="about-us.css" />
     <title>About us - WealthPsychology</title>
   </head>
