--- a/public/our-plans/our-plans.html
+++ b/public/our-plans/our-plans.html
@@ -68,7 +68,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <script defer src="/frontend/components/themes/dark-mode-toggle.js"></script>
 
-    <base href="/frontend/our-plans/" />
+    <base href="/public/our-plans/" />
     <link rel="stylesheet" href="our-plans.css" />
     <title>Our Plans - WealthPsychology</title>
   </head>
