--- a/public/our-team/our-team.html
+++ b/public/our-team/our-team.html
@@ -61,7 +61,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <script defer src="/frontend/components/themes/dark-mode-toggle.js"></script>
 
-    <base href="/frontend/our-team/">
+    <base href="/public/our-team/">
     <link rel="stylesheet" href="our-team.css" />
     <title>Our Team - Wealthpsychology</title>
   </head>
